# render-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json
docs/: README.md
include/: Application.h  common.h  geometry.h  logger.h  rasterizer.h  renderEngine.h  vulkanWrapper.h  windowManager.h
src/: Application.cpp  geometry.cpp  logger.cpp  main.cpp  rasterizer.cpp  renderEngine.cpp  vulkanWrapper.cpp  windowManager.cpp
